# whisper-exchange

./: .gitignore  Anchor.toml  CLAUDE.md  README.md
agents/: .env.example  anchor-helpers.ts  buyer.ts  crypto.ts  package-lock.json  package.json  purchase-via-er.ts  signals.ts  supplier.ts  tsconfig.json  webhook-receiver.ts
agents/lib/: signal-filter.ts  signal-normalize.ts
agents/tests/: commitment.test.ts
app/: .env.example  package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
docs/: accounts-proposal.md  agent-protocol.md  anchor-schema.md  decisions.md  demo-script.md  flows.md  frontier-track-plan.md  helius-webhook-setup.md  magicblock-integration.md  sunday-checklist.md  sunday-plan.md  wallet-onboarding-design.md
loop/: Dockerfile  README.md  fly.toml  package.json  runner.ts
output/: e2e-log.txt
programs/whisper/: Cargo.toml
programs/whisper/src/: error.rs  instructions.rs  lib.rs  state.rs
programs/whisper/src/instructions/: commit_and_undelegate_test.rs  create_listing.rs  delegate_for_purchase.rs  delegate_test.rs  delegate_test_with_transfer.rs  deliver_payload.rs  init_purchase_for_delegation.rs  purchase_listing.rs  purchase_listing_private.rs  purchase_listing_public.rs  register_agent.rs  settle_purchase.rs  submit_rating.rs
programs/whisper/tests/: test_initialize.rs
scripts/: deploy-devnet.sh  e2e-test.ts  fund-agent.ts  generate-agent.ts  launch-multi.sh  multi-e2e.ts  preflight-multi.ts  run-e2e.sh  setup-devnet.sh  test-sol-on-er-bundled.ts  test-sol-on-er.ts  verify-wallet-x25519-interop.ts
(+28 files in other folders)
